# wasmx

./: Cargo.toml  README.md  flake.nix  wasmx.toml
crates/wasmx/: Cargo.toml
crates/wasmx/src/: host.rs  lib.rs  wasmtime.rs
crates/wasmx/src/config/: component.rs  mod.rs  service.rs  workload.rs
crates/wasmx/src/config/env/: mod.rs
crates/wasmx/src/config/env/sockets/: host.rs  mod.rs  none.rs
crates/wasmx/src/engine/: bindings.rs  mod.rs  plugin.rs  resource_types.rs
crates/wasmx/src/engine/wasi/: mod.rs
crates/wasmx/src/engine/wasi/cli/: host.rs  mod.rs
crates/wasmx/src/engine/wasi/clocks/: host.rs  mod.rs
crates/wasmx/src/engine/wasi/filesystem/: host.rs  mod.rs
crates/wasmx/src/engine/wasi/http/: body.rs  client.rs  conv.rs  mod.rs  proxy.rs  request.rs  response.rs
crates/wasmx/src/engine/wasi/http/host/: handler.rs  mod.rs  types.rs
crates/wasmx/src/engine/wasi/io/: error.rs  mod.rs  poll.rs  streams.rs
crates/wasmx/src/engine/wasi/random/: host.rs  mod.rs
crates/wasmx/src/engine/wasi/sockets/: mod.rs  tcp.rs  udp.rs  util.rs
crates/wasmx/src/engine/wasi/sockets/host/: ip_name_lookup.rs  mod.rs  network.rs  tcp.rs  udp.rs
crates/wasmx/src/engine/workload/: mod.rs  value.rs
crates/wasmx/wit/: deps.toml  world.wit
examples/rust/f1/: Cargo.toml
examples/rust/f1/src/: lib.rs
examples/rust/f1/wit/: world.wit
examples/rust/f2/: Cargo.toml
examples/rust/f2/src/: lib.rs
examples/rust/f2/wit/: deps.toml  world.wit
examples/rust/hello/: Cargo.toml
examples/rust/hello/src/: lib.rs
examples/rust/hello/wit/: world.wit
examples/rust/memdb/: Cargo.toml
examples/rust/memdb/src/: lib.rs
examples/rust/memdb/wit/: deps.toml  world.wit
examples/rust/redis/: Cargo.toml
examples/rust/redis-http/: Cargo.toml
examples/rust/redis-http/src/: lib.rs
examples/rust/redis-http/wit/: deps.toml  world.wit
examples/rust/redis/src/: bindings.rs  database.rs  lib.rs  pool.rs  resp3.rs
examples/rust/redis/wit/: world.wit
examples/rust/sockets/: Cargo.toml
examples/rust/sockets/src/: main.rs
examples/rust/spinloop/: Cargo.toml
examples/rust/spinloop/src/: lib.rs
examples/wit/db/: db.wit  deps.toml
src/: main.rs
