[package]
name = "wasmx-cli"
version = "0.0.0"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
description = "High-performance, embeddable WebAssembly execution engine"
edition = "2021"
homepage = "https://github.com/rvolosatovs/wasmx"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/rvolosatovs/wasmx"

[workspace]
resolver = "2"
members = ["crates/*", "examples/rust/*"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = [
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
humantime = { workspace = true }
quanta = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
] }
wasmx = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
bitflags = { version = "2", default-features = false }
bytes = { version = "1", default-features = false }
cap-fs-ext = { version = "3", default-features = false }
cap-net-ext = { version = "3", default-features = false }
cap-rand = { version = "3", default-features = false }
cap-std = { version = "3", default-features = false }
cap-time-ext = { version = "3", default-features = false }
clap = { version = "4", default-features = false }
fs-set-times = { version = "0.20", default-features = false }
futures = { version = "0.3", default-features = false }
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
humantime = { version = "2", default-features = false }
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
io-lifetimes = { version = "2", default-features = false }
libc = { version = "0.2", default-features = false }
libloading = { version = "0.8", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
quanta = { version = "0.12", default-features = false }
reqwest = { version = "0.11", default-features = false }
rustix = { version = "1", default-features = false }
rustls = { version = "0.23", default-features = false }
semver = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
system-interface = { version = "0.27", default-features = false }
tokio = { version = "1", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
toml = { version = "0.8", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
url = { version = "2", default-features = false }
wasi-preview1-component-adapter-provider = { version = "32", default-features = false }
wasmparser = { version = "0.229", default-features = false }
wasmtime = { version = "32", default-features = false }
wasmtime-cabish = { version = "0.3.1", path = "../cabish/crates/wasmtime", default-features = false }
webpki-roots = { version = "0.26", default-features = false }
wasmx = { version = "0.0.0", path = "./crates/wasmx" }
wasmx-cli = { path = "./." }
wit-bindgen = { version = "0.41", default-features = false }
wit-component = { version = "0.229", default-features = false }
