[package]
name = "example-redis"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
redis-protocol = { version = "6", features = ["bytes", "codec"] }
wasi = "0.14"
wit-bindgen = "0.41"
